st/mesa: fix sRGB renderbuffers without EXT_framebuffer_sRGB support

https://bugs.freedesktop.org/show_bug.cgi?id=59322

Cc: mesa-stable@lists.freedesktop.org